--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -30,6 +30,17 @@
                     enterprise
                     level product development.
                 </p>
+                <div class="social-row">
+                    <a mat-icon-button target="_blank" href="https://github.com/ravi25595"><i
+                            class="fab fa-github"></i></a>
+                    <a mat-icon-button target="_blank" href="https://www.linkedin.com/in/hello-ravinder/">
+                        <i class="fab fa-linkedin"></i></a>
+                    <a mat-icon-button><i class="fab fa-google"></i></a>
+                    <a mat-icon-button><i class="fab fa-x"></i></a>
+                    <a mat-icon-button href="https://www.facebook.com/ravindrakumar.nayak.54" target="_blank">
+                        <i class="fab fa-facebook"></i></a>
+                    <a mat-icon-button><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
             <div class="greeting-image">
                 <svg id="b52d7e2d-d80f-4111-b6ed-d15502ee1edd" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
@@ -70,7 +81,8 @@
                     <path
                         d="M859.81989,235.61493H610.63446a9.4227,9.4227,0,0,0-9.42389,9.42389V412.89655a9.4227,9.4227,0,0,0,9.42389,9.42388h94.5929l-3.54389,22.62623s-20.25281,10.75927-6.01251,11.07574,81.32764,0,81.32764,0,12.97448,0-7.59479-11.39221l-3.33362-22.30976h93.7497a9.42266,9.42266,0,0,0,9.42388-9.42388V245.03882A9.42266,9.42266,0,0,0,859.81989,235.61493Z"
                         transform="translate(-244.40605 -115.15866)" fill="#001C55"></path>
-                    <rect x="365.82336" y="130.42445" width="249.99557" height="139.87094" fill="#f2f2f2"></rect>
+                    <rect x="365.82336" y="130.42445" width="249.99557" height="139.87094"
+                        [attr.fill]="isDark?'#222':'#f2f2f2'"></rect>
                     <circle cx="490.82114" cy="125.99415" r="1.58225" fill="#f2f2f2"></circle>
                     <circle cx="490.82114" cy="294.34559" r="6.01255" fill="#f2f2f2"></circle>
                     <polygon
@@ -88,7 +100,7 @@
                         opacity="0.1"></polygon>
                     <path
                         d="M339.06751,115.15881a8.55394,8.55394,0,0,0-4.96126,1.1083c-1.476,1.0108-2.40629,2.78162-3.35588,4.42947a52.98576,52.98576,0,0,1-14.43428,16.30464c-4.28894,3.142-9.74169,7.05966-9.00789,12.85269a17.37163,17.37163,0,0,0,2.09058,5.4255c3.9566,7.987,14.75357,14.15926,13.69156,23.27309,3.931-6.58092-1.327-9.835,2.604-16.41586,1.87205-3.134,5.12412-6.67168,7.95054-4.70353.94637.659,1.56777,1.84095,2.55314,2.41917,2.35122,1.37972,4.85259-1.258,6.93387-3.12633,7.17685-6.44263,17.383-4.7548,26.31387-2.74743,4.21624.94767,8.8473,2.191,11.33971,6.2207,3.277,5.29821-3.11344,11.02034-4.72807,17.01049a3.264,3.264,0,0,0,3.50293,4.06214c2.67975-.26434,5.8542-.481,6.01278-1.65694,3.37154.12,7.50269-.26181,8.94728-3.7725a14.76216,14.76216,0,0,0,.69252-4.29319c.5302-5.89718,3.0331-11.27719,4.69119-16.88993s2.37906-12.1905-.41909-17.1668a19.86362,19.86362,0,0,0-3.666-4.45557C379.94,117.67017,359.06259,115.136,339.06751,115.15881Z"
-                        transform="translate(-244.40605 -115.15866)" fill="#00072D"></path>
+                        transform="translate(-244.40605 -115.15866)" [attr.fill]="isDark?'#fff':'#00072D'"></path>
                     <path
                         d="M326.54375,190.06386s3.4534,28.7784-9.20909,31.08068,11.51136,41.4409,11.51136,41.4409l57.55681,6.90682-13.81364-46.04545s-9.20909-3.45341-3.4534-26.47613S326.54375,190.06386,326.54375,190.06386Z"
                         transform="translate(-244.40605 -115.15866)" fill="#ffb8b8"></path>
@@ -118,7 +130,7 @@
                         transform="translate(-244.40605 -115.15866)" fill="#ffb8b8"></path>
                     <path
                         d="M340.74981,124.19457a7.83806,7.83806,0,0,0-4.03868.78334,9.41322,9.41322,0,0,0-2.73182,3.13072,39.77267,39.77267,0,0,1-11.7501,11.524c-3.49138,2.22077-7.93014,4.98972-7.3328,9.0842a11.35949,11.35949,0,0,0,1.70182,3.8347,30.16344,30.16344,0,0,1,3.66519,18.80068l9.60011-13.954c1.52393-2.21507,4.17125-4.7155,6.47207-3.32442.77039.46577,1.27623,1.30117,2.07836,1.70985,1.914.97518,3.95021-.88912,5.64447-2.20967,5.84225-4.55361,14.15049-3.36066,21.42059-1.94187,3.43219.66981,7.20207,1.54859,9.231,4.39676,3.37169,4.73311-.149,11.5721,1.81882,17.04a5.02339,5.02339,0,0,0,2.07852-3.31717c2.74457.08484,6.1075-.185,7.28345-2.66638a9.18757,9.18757,0,0,0,.56374-3.03439c.43161-4.16809,2.46907-7.97065,3.81883-11.93769s1.93666-8.61616-.34116-12.13338a14.68107,14.68107,0,0,0-2.98426-3.14917C374.02174,125.96958,357.02664,124.17845,340.74981,124.19457Z"
-                        transform="translate(-244.40605 -115.15866)" fill="#00072D"></path>
+                        transform="translate(-244.40605 -115.15866)" [attr.fill]="isDark?'#fff':'#00072D'"></path>
                     <path
                         d="M406.54771,237.836l10.72528,2.84686s24.95995,63.919,19.20427,107.66222-9.20909,34.53409-9.20909,34.53409-9.20909-20.72046-29.92955-16.11591Z"
                         transform="translate(-244.40605 -115.15866)" [attr.fill]="isDark?'#E95420':'#00072D'"></path>
@@ -171,6 +183,14 @@
                     </g>
                 </svg>
             </div>
+        </div>
+    </section>
+    <section>
+
+        <div class="greeting-main">
+            <h1 style="text-align: center;width: 100%;background: red;">What I Do?</h1>
+            <div class="greeting-image"></div>
+            <div class="greeting-text"></div>
         </div>
     </section>
 </div>
