--- a/src/app/home/home-page/home-page.component.scss
+++ b/src/app/home/home-page/home-page.component.scss
@@ -66,8 +66,10 @@ section {
     }
 
     svg {
-        path {
-            transition: fill 1s ease-in;
+
+        path,
+        rect {
+            transition: fill 500ms ease-in;
         }
     }
 
@@ -78,6 +80,59 @@ section {
     p {
         font-size: 1.5rem;
         text-align: justify;
+    }
+}
+
+.social-row {
+    gap: 10px;
+    display: flex;
+
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 25px;
+        transition: box-shadow 1s, transform .2s, background 1s;
+    }
+
+    a:nth-child(1) {
+        background-color: #181717
+    }
+
+    a:nth-child(2) {
+        background-color: #0077b5
+    }
+
+    :nth-child(3) {
+        background-color: #d14836;
+    }
+
+    :nth-child(4) {
+        background-color: black;
+    }
+
+    :nth-child(5) {
+        background-color: #0866FF;
+    }
+
+    :nth-child(6) {
+        background: linear-gradient(0deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    }
+
+    a:hover {
+        background-color: #00072D;
+        box-shadow: 0 0 20q;
+        transform: scale(1.1);
+    }
+
+}
+
+a {
+    border-radius: 50%;
+
+    i {
+        font-size: 2rem;
+        color: #fff;
     }
 }
 
